<resources>
    <string name="plugin_name" translatable="false">UXMobile</string>
    <string name="global_message_title">Would you like to take a part in study?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Ask me later</string>
    <string name="consent_title">Do you agree with terms of use?</string>
    <string name="next">Next</string>
    <string name="question">"Question "</string>
    <string name="instructions">Instructions</string>
    <string name="task_end">End task</string>
    <string name="end_study">Would you like end this study?</string>
    <string name="understand">Understand</string>
    <string name="answer_here">Your answer here...</string>
    <string name="task_accept">Accept task</string>
    <string name="task_list">List of currently available tasks</string>
    <string name="end_task_performing">End performing tasks</string>
    <string name="skip">Skip</string>
    <string name="end">End</string>
    <string name="back">Back</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly \nDisagree</string>
    <string name="more_or_less_disagree">More or less \nDisagree</string>
    <string name="neutral">Neutral</string>
    <string name="more_or_less_agree">More or less \nAgree</string>
    <string name="strongly_agree">Strongly \nAgree</string>
    <string name="agree">Agree</string>
    <string name="reason_empty">Reason cannot be empty!</string>
    <string name="reason_title">Please, put some reason, why you choose this answer</string>
    <string name="answer_empty">Please, answer this question!</string>
    <string name="error_no_internet_conn">No internet connection. Please, enable wifi/data and click \"Try again\".</string>
    <string name="cancel_and_end_study">Cancel and end study</string>
    <string name="try_again">Try again</string>
    <string name="welcome">Welcome to study</string>
    <string name="thank_you">Thank you, that\'s all!</string>
    <string name="reject_title">Thank you and hope we see you next time!</string>
    <string name="reject_content">We are a little sad, but also next day is there a opportunity to change your favorite application by participating in study!</string>
    <string name="consent">**When UXMobile is integrated as a service we collect the following information:**  1.  Consistent random pseudo ID for every end user 2.  After reading the task, you will be redirected to a website. 3.  Geographic location (Country only). 4.  Screens visited by the end user in an app using UXMobile only. 5.  Interaction patterns by the end user on your app (screen actions, gestures: taps, scrolls) 6.  Information provided by the customer (except information customer chooses to block from being sent to UXMobile)  We strictly adhere to a **non-recording policy of any PII** (Personally Identifiable Information) and contractually prohibits recording of sensitive information including ePHI, PCI or PII information. We provide API methods to hide PII and sensitive information.    **We require you, as a customer, to hide PII information and only process anonymized data and to mention the usage of UXCam on your privacy policy.**    As such the data UXMobile processes on behalf of its customers are anonymous.</string>
    <string name="questionnaire_segmentation">Segmentation questionnaire</string>
    <string name="questionnaire_post_study">Post-study questionnaire</string>
    <string name="questionnaire_pre_study">Pre-study questionnaire</string>
    <string name="appbar_title">UXMobile - study guide</string>
    <string name="task">Task</string>
</resources>
