<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Base">

    <!--when collapsed-->
    <RelativeLayout
        android:id="@+id/collapsed_float_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imageView_float_widget"
            android:layout_width="65sp"
            android:layout_height="65sp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logo" />
    </RelativeLayout>

    <!--when expanded-->
    <LinearLayout
        android:id="@+id/expanded_float_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_round_corners"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView_float_widget_back_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_right" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.Description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plugin_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_float_widget_instructions"
                    style="@style/Button.Float.Widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/instructions" />

                <Button
                    android:id="@+id/button_float_widget_skip"
                    style="@style/Button.Float.Widget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/skip" />
            </LinearLayout>

            <Button
                android:id="@+id/button_float_widget_end_task"
                style="@style/Button.Float.Widget"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/task_end" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_float_widget_back_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_action_left" />
    </LinearLayout>
</FrameLayout>
